Validate script already exists

--- a/pgin/templates/revert.tmpl
+++ b/pgin/templates/revert.tmpl
@@ -1,4 +1,4 @@
-from lib.basemigration import Basemigration
+from pgin.lib.basemigration import Basemigration
 # =========================================
 
 
