--- a/pgin/templates/deploy.tmpl
+++ b/pgin/templates/deploy.tmpl
@@ -1,5 +1,5 @@
-from lib.basemigration import Basemigration
-# =========================================
+from pgin.lib.basemigration import Basemigration
+# ==============================================
 
 
 class {{ name.capitalize() }}(Basemigration):
@@ -19,4 +19,3 @@ class {{ name.capitalize() }}(Basemigration):
         except Exception:
             self.conn.rollback()
             raise
-        # ______________________________________
